--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,5 +29,4 @@ jobs:
           password: ${{ secrets.SSH_PASS }}
           script: |
             cd /home/projetos/pdf-search
-            &&
-            docker-compose up -d
+            docker compose up -d
