remove --no-dev

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
       - name: "Baixar o código"
         uses: actions/checkout@v4
       - name: "PHP Composer install"
-        run:  composer install --no-interaction --no-progress --no-suggest --no-dev --ignore-platform-reqs
+        run:  composer install --no-interaction --no-progress --no-suggest --ignore-platform-reqs
 
       - name: "Copiar arquivos para VPS"
         uses: appleboy/scp-action@v0.1.7
