--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,10 @@ jobs:
         uses: actions/checkout@v4
       - name: "PHP Composer install"
         run:  composer install --ignore-platform-reqs
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
 
       - name: "Copiar arquivos para VPS"
         uses: appleboy/scp-action@v0.1.7
