--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,11 +10,7 @@ jobs:
       - name: "Baixar o código"
         uses: actions/checkout@v4
       - name: "PHP Composer install"
-        run:  composer install --ignore-platform-reqs
-      - name: Set up PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.2'
+        run:  composer install --no-interaction --no-progress --no-suggest --no-dev --ignore-platform-reqs
 
       - name: "Copiar arquivos para VPS"
         uses: appleboy/scp-action@v0.1.7
