--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,4 +29,5 @@ jobs:
           password: ${{ secrets.SSH_PASS }}
           script: |
             cd /home/projetos/pdf-search
+            ./vendor/bin/sail down
             ./vendor/bin/sail up -d
