--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,3 +31,4 @@ jobs:
             cd /home/projetos/pdf-search
             ./vendor/bin/sail down
             ./vendor/bin/sail up -d
+            cd chmod -R 777 storage bootstrap/cache
